add remove from cart

--- a/views/checkout/single_package.hbs
+++ b/views/checkout/single_package.hbs
@@ -17,8 +17,8 @@
               <span class="input-group-btn">
                 <button class="btn btn-success btn-block" id="promocodeButton">Apply</button>
               </span>
-              <p class="text-center" id="promocodeResponse"></p>
             </div>
+            <p class="text-center" id="promocodeResponse"></p>
 
             <hr />
 
@@ -35,7 +35,7 @@
             <hr />
 
             <div class="space-between">
-              <h3><span>Total: </span><span class="dollar fee">${{ totalPrice }}</span></h3>
+              <h3><span>Total: </span><span class="dollar fee">$<span id="totalPrice">{{ totalPrice }}</span></span></h3>
             </div>
 
             <hr />
