--- a/views/main/service_detail.hbs
+++ b/views/main/service_detail.hbs
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-md-7">
 
+      <div id="code"></div>
+
       <div class="overview">
+        <input type="hidden" value="{{ gig._id }}" id="gig_id" />
         <div class="template-card">
           <div class="name">
             <h2 class="h2-size">{{ gig.title }}</h2>
@@ -29,6 +32,7 @@
           <div class="name">
             <h3>${{ gig.price }} Order Details</h3>
             <a href="/checkout/single_package/{{ gig._id }}" class="btn btn-success btn-lg">Proceed to Order</a>
+            <button class="btn btn-success btn-lg space-left" id="add-to-cart"><i class="fa fa-shopping-cart"></i></button>
           </div>
         </div>
       </div>
