--- a/public/css/gig.css
+++ b/public/css/gig.css
@@ -181,7 +181,13 @@
 .single-order-package-card .proceed-btn {
   margin-right: 50px;
   margin-left: 50px;
-  width: 350px
+  width: 350px;
+  
+}
+
+.cart-summary .proceed-btn,
+.cart-summary .cart {
+  margin-bottom: 20px;
 }
 
 .margin-both {
@@ -218,4 +224,18 @@
   margin-right: 60px;
   position: absolute;
   bottom: 20px;
+}
+
+.cart-card {
+  background-color: #fff;
+  width: 100%;
+  height: 250px;
+  border: 1px #e5e5e5 solid;
+}
+
+.cart-summary {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+  border: 1px #e5e5e5 solid;
 }
