facebook login and register

--- a/views/order/cart.hbs
+++ b/views/order/cart.hbs
@@ -70,7 +70,7 @@
 
               <hr />
 
-              <a href="/payment" class="btn btn-success btn-lg proceed-btn">Proceed to payment</a> {{ else }}
+              <a href="/payment/cart" class="btn btn-success btn-lg proceed-btn">Proceed to payment</a> {{ else }}
               <div class="proceed-btn">
                 Cart Empty
               </div>
