--- a/views/accounts/login.hbs
+++ b/views/accounts/login.hbs
@@ -29,6 +29,10 @@
     </form>
     <hr />
 
+    <a href="/auth/facebook" class="btn btn-block btn-social btn-facebook btn-lg">
+      <i class="fa fa-facebook"></i> Sign in with Facebook
+    </a>
+
   </div>
 </div>
 </div>
